refactoring/correcting sass and BEM method of styling. Also making the page more readable and attractive

--- a/styles.scss
+++ b/styles.scss
@@ -48,7 +48,7 @@
 body {
     display: flex;
     flex-direction: column;
-    margin: 0px 0px;
+    margin: 10px 10px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--base-colour);
     color: var(--text-color);
@@ -61,9 +61,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     margin: 0 auto;
-    max-width: 1500px;
     width: 100%;
 }
 .introLine {
@@ -71,10 +69,10 @@ main {
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
-    &--img {
+    &__img {
         display: none;
     }
-    &--juniorDev {
+    &__juniorDev {
         display: flex;
         text-align: left;
     }
@@ -83,7 +81,16 @@ main {
 .aboutMe {
     text-align: center;
     padding-top: 50px;
-    &--img {
+    &__content {
+        padding: 5px 5px;
+        border: solid rgb(1, 8, 102);
+        border-radius: 5%;
+    }
+    &__title {
+    }
+    &__para {
+    }
+    &__img {
         width: 300px;
         height: 300px;
         border-radius: 10%;
@@ -195,172 +202,5 @@ main {
     }
     &__icon path {
         fill: white;
-    }
-}
-@media only screen and (max-width: 600px) {
-    body {
-        display: flex;
-        flex-direction: column;
-    }
-    .aboutMe {
-        flex-direction: column;
-    }
-}
-
-@media only screen and (min-width: 601px) {
-    body {
-        display: flex;
-        font-size: x-large;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    header {
-        position: sticky;
-        top: 0;
-    }
-    .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-left: 50px;
-        background-color: rgb(1, 8, 102);
-        color: white;
-
-        &--navBar {
-            display: flex;
-            padding: 5px;
-            justify-content: space-evenly;
-            list-style-type: none;
-            text-decoration: none;
-        }
-    }
-
-    main {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: 0 auto;
-        max-width: 1500px;
-        width: 100%;
-    }
-
-    li {
-        padding-right: 20px;
-        a {
-            text-decoration: none;
-            color: white;
-        }
-        #contact {
-            border: white 1px solid;
-            padding: 5px 15px 5px 15px;
-            border-radius: 10%;
-        }
-    }
-
-    .introLine {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        padding-top: 70px;
-
-        &--content {
-            padding-left: 50px;
-        }
-        &--img {
-            display: flex;
-            justify-content: flex-end;
-            margin-right: 100px;
-            width: 500px;
-            height: 500px;
-            border-radius: 10%;
-            border: black 2px solid;
-            object-fit: cover;
-        }
-    }
-    .aboutMe {
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        margin: 50px;
-
-        &--img {
-            width: 500px;
-            height: 500px;
-            border-radius: 10%;
-            object-fit: cover;
-            border: black 2px solid;
-        }
-        &--content {
-            flex: 1;
-            padding-left: 80px;
-            text-align: left;
-        }
-        &--title {
-            margin-bottom: 10px;
-        }
-    }
-    .technicalSkills {
-        padding-top: 30px;
-        &--title {
-            font-weight: bold;
-            text-align: center;
-        }
-        &--para {
-            padding: 0px 150px 0px 150px;
-        }
-    }
-    .allIcons {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding-bottom: 70px;
-        svg {
-            display: flex;
-
-            height: 100px;
-            width: 100px;
-        }
-    }
-    .projects {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-column-gap: 10px;
-        grid-row-gap: 50px;
-        padding-bottom: 30px;
-
-        img {
-            width: 500px;
-            border-radius: 10%;
-            border: black 2px solid;
-        }
-        &--title {
-            text-align: center;
-        }
-        &--one {
-            grid-area: 1 / 1 / 2 / 2;
-        }
-        &--second {
-            grid-area: 1 / 2 / 2 / 3;
-        }
-        &--third {
-            grid-area: 2 / 1 / 3 / 2;
-        }
-        &--forth {
-            grid-area: 2 / 2 / 3 / 3;
-        }
-        &__btn {
-            padding: 10px 20px;
-            border-radius: 10%;
-            color: white;
-            font-size: large;
-            background-color: rgb(1, 8, 102);
-        }
-        &__link {
-            text-decoration: none;
-            color: inherit;
-            &:visited {
-                color: yellow;
-            }
-        }
     }
 }
